Fri Mar 13 12:29:07 2015  Tanaka Akira  <akr@fsij.org>

	* test/readline/test_readline.rb: Restore environment variables:
	  COLUMNS LINES

Fri Mar 13 11:37:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: needs --enable-shared when linked to
	  libruby or fiddle.so.  since --with-static-linked-ext does no
	  longer link extensions to ruby program with --enable-shared, the
	  only combination needs --enable-static is --disable-shared and
	  --with-static-linked-ext.  [ruby-dev:48901] [Bug #10960]

Fri Mar 13 07:02:20 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_s_accept_nonblock): use rb_hash_lookup2
	* ext/openssl/ossl_ssl.c (get_no_exception): new function
	  (ossl_ssl_accept_nonblock): use get_no_exception
	  (ossl_ssl_read_internal): ditto
	  (ossl_ssl_write_nonblock): ditto
	  [ruby-core:68511]

Fri Mar 13 07:01:38 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c: predefine wait_*able symbols

Thu Mar 12 22:59:53 2015  Tanaka Akira  <akr@fsij.org>

	* test/lib/leakchecker.rb: Check environment variables.

Thu Mar 12 05:54:27 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_s_accept_nonblock):
	  support exception: false
	  [ruby-core:66385] [Feature #10532]
	* ext/socket/init.c (rsock_init_socket_init): define new symbols
	* ext/socket/rubysocket.h: adjust prototype
	* ext/socket/socket.c (sock_accept_nonblock): support exception: false
	* ext/openssl/ossl_ssl.c (ossl_ssl_accept_nonblock): ditto
	* ext/socket/socket.c (Init_socket): adjust accept_nonblock definition
	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): ditto
	* ext/socket/tcpserver.c (rsock_init_tcpserver): ditto
	* ext/socket/unixserver.c (rsock_init_unixserver): ditto
	* ext/socket/tcpserver.c (tcp_accept_nonblock): adjust
	  rsock_s_accept_nonblock call
	* ext/socket/unixserver.c (unix_accept_nonblock): ditto
	* ext/openssl/ossl_ssl.c (ossl_start_ssl): support no_exception