@@ -1,3 +1,8 @@
+Fri Mar 13 15:03:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_close_read, rb_io_close_write): don't raise after
+	  close same as IO#close.
+
 Fri Mar 13 12:29:07 2015  Tanaka Akira  <akr@fsij.org>
 
 	* test/readline/test_readline.rb: Restore environment variables:
